--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Min bil" tabIcon="car" id="mainPage-tab1"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Mitt sikringsskap" tabIcon="flash" id="mainPage-tab2"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="NEAS produkter" tabIcon="bulb" id="mainPage-tab3"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Kontakt oss" tabIcon="call" id="mainPage-tab4"></ion-tab>
 </ion-tabs>
