Endret navn på n-eas

--- a/src/pages/neasprodukter/neasprodukter.html
+++ b/src/pages/neasprodukter/neasprodukter.html
@@ -6,9 +6,9 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-  <ion-list id="nEASProdukter-list1">
+  <ion-list id="NEASProdukter-list1">
     <ion-item-sliding>
-      <ion-item color="none" id="nEASProdukter-list-item1">
+      <ion-item color="none" id="NEASProdukter-list-item1">
         <ion-thumbnail item-left>
           <img />
         </ion-thumbnail>
@@ -20,7 +20,7 @@
         <button ion-button color="positive"></button>
       </ion-item-options>
     </ion-item-sliding>
-    <ion-item color="none" id="nEASProdukter-list-item2">
+    <ion-item color="none" id="NEASProdukter-list-item2">
       <ion-thumbnail item-left>
         <img />
       </ion-thumbnail>
@@ -28,7 +28,7 @@
         Item
       </h2>
     </ion-item>
-    <ion-item color="none" id="nEASProdukter-list-item3">
+    <ion-item color="none" id="NEASProdukter-list-item3">
       <ion-thumbnail item-left>
         <img />
       </ion-thumbnail>
