--- a/src/pages/neasprodukter/neasprodukter.html
+++ b/src/pages/neasprodukter/neasprodukter.html
@@ -10,7 +10,7 @@
     <ion-item-sliding>
       <ion-item color="none" id="NEASProdukter-list-item1">
         <ion-thumbnail item-left>
-          <img />
+          <img src="assets/produktbilder/ehome.jpg"/>
         </ion-thumbnail>
         <h2>
           Item
@@ -22,7 +22,7 @@
     </ion-item-sliding>
     <ion-item color="none" id="NEASProdukter-list-item2">
       <ion-thumbnail item-left>
-        <img />
+        <img src="assets/produktbilder/pulsarsocket.png"/>
       </ion-thumbnail>
       <h2>
         Item
@@ -30,7 +30,7 @@
     </ion-item>
     <ion-item color="none" id="NEASProdukter-list-item3">
       <ion-thumbnail item-left>
-        <img />
+        <img src="assets/produktbilder/wallcommander.png"/>
       </ion-thumbnail>
       <h2>
         Item
