fikset ampere velgeren og crlf til lf

--- a/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
+++ b/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
@@ -10,13 +10,13 @@
     Hvilken ampere er det i din hovedsikring
   </h2>
   <ion-list>
-    <button ion-button block (click)="selectAmpere('20A')">
+    <button ion-button block (click)="selectAmpere('40')">
       40 A
     </button>
-    <button id="mittSikringsskap-button2" ion-button color="positive" block (click)="selectAmpere('25A')">
+    <button ion-button block (click)="selectAmpere('50')">
       50 A
     </button>
-    <button id="mittSikringsskap-button3" ion-button color="positive" block (click)="selectAmpere('32A')">
+    <button ion-button block (click)="selectAmpere('63')">
       63 A
     </button>
   </ion-list>
