--- a/src/pages/w1140/w1140.html
+++ b/src/pages/w1140/w1140.html
@@ -14,7 +14,7 @@
       Dette er det vi kom frem til at du kan få ut av veggen hos deg
     </p>
   </div>
-  <h1 id="w1140-heading17" style="color:#31DC51;font-weight:300;text-align:center;">
-    11 040 W
+  <h1 class="resultat">
+    {{ resultatTekst }}
   </h1>
 </ion-content>
