--- a/src/pages/sikrings-valg/sikrings-valg.html
+++ b/src/pages/sikrings-valg/sikrings-valg.html
@@ -1,35 +1,41 @@
+<!--
+  Generated template for the SikringsValgPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      w32 A
-    </ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
+
 </ion-header>
-<ion-content padding id="page7">
+<ion-content padding>
   <h3 id="w32A-heading5" style="color:#000000;">
-    Du behøver en elbillader med mindre enn eller like mye som 32 Amp
+    Du behøver en elbillader med mindre enn eller like mye som {{ maxAmpere }} Amp
   </h3>
   <div id="w32A-markdown5" class="show-list-numbers-and-dots">
     <p style="color:#000000;">
-      For at vi skal velge riktig lader til deg trenger vi å vite hva slagsspenning det er i ditt skap
+      For at vi skal velge riktig lader til deg trenger vi å vite hva slags strømstyrke du vil ha til laderen
     </p>
   </div>
   <form id="w32A-form5">
     <ion-item id="w32A-select4">
       <ion-label>
-        Velg antall amper
+        Velg antall ampere
       </ion-label>
       <ion-select name="Ampervelger" (ionChange)="selectAmp($event)">
-        <ion-option>
+        <ion-option value="10">
           10 A
         </ion-option>
-        <ion-option>
+        <ion-option value="16">
           16 A
         </ion-option>
-        <ion-option>
+        <ion-option value="20">
           20 A
         </ion-option>
-        <ion-option ngIf="sikringAmpere='63A'">
+        <ion-option  value="32" *ngIf="vis32Ampere">
           32 A
         </ion-option>
       </ion-select>
