--- a/src/pages/neasprodukter/neasprodukter.html
+++ b/src/pages/neasprodukter/neasprodukter.html
@@ -13,7 +13,7 @@
           <img src="assets/produktbilder/ehome.jpg"/>
         </ion-thumbnail>
         <h2>
-            <button (click)="goTo('ceh')">Ladepakke Basis - Circontrol eHome</button>
+            <button (click)="goTo('ceh')">Circontrol eHome</button>
         </h2>
       </ion-item>
       <ion-item-options side="left">
@@ -25,7 +25,7 @@
         <img src="assets/produktbilder/pulsarsocket.png"/>
       </ion-thumbnail>
       <h2>
-          <button (click)="goTo('wp')">Smart lader - Wallbox Pulsar</button>
+          <button (click)="goTo('wp')">Wallbox Pulsar</button>
       </h2>
     </ion-item>
     <ion-item color="none" id="NEASProdukter-list-item3">
@@ -33,7 +33,7 @@
         <img src="assets/produktbilder/wallcommander.png"/>
       </ion-thumbnail>
       <h2>
-        <button (click)="goTo('wcmd')">Smart lader pluss - Wallbox Commander</button>
+        <button (click)="goTo('wbcd')">Wallbox Commander</button>
       </h2>
     </ion-item>
   </ion-list>
