--- a/src/pages/kontakt-oss/kontakt-oss.html
+++ b/src/pages/kontakt-oss/kontakt-oss.html
@@ -8,19 +8,19 @@
 <ion-content padding id="page23">
   <h1 id="kontaktOss-heading22" style="color:#000000;text-align:center;">
     Vi holder til på
-  </h1>
+  </h1><br>
   <div id="kontaktOss-markdown16" style="text-align:center;" class="show-list-numbers-and-dots">
     <p style="color:#000000;">
       Industriveien 1
-    </p>
+    </p><br>
     <p style="color:#000000;">
       6517 Kristiansund
-    </p>
+    </p><br>
   </div>
-  <button id="kontaktOss-button14" ion-button color="positive" block href="tel:+47 71565525">
+  <button ion-button color="positive" block href="tel: +47 71565525">
     Ring oss
-  </button>
-  <button id="kontaktOss-button15" ion-button color="positive" block href="mailto:neas@neas.mr.no">
+  </button><br>
+  <button ion-button color="positive" block href="mailto:neas@neas.mr.no">
     E-post
   </button>
 </ion-content>
