--- a/src/pages/wp/wp.html
+++ b/src/pages/wp/wp.html
@@ -7,12 +7,140 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>wp</ion-title>
+    <ion-title>Smart lader - Wallbox Pulsar </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <div class="intro">
+    <img src="assets/produktbilder/pulsarsocket.png"/>
+    <h1>
+      Smart lader - Wallbox Pulsar
+    </h1>
+    <p>
+      Lad elbilen trygt hjemme. Smart lader - Wallbox Pulsar er ladepakken for deg som vil koble deg opp mot laderen og styre ladingen.
+      Denne har bluetooth og app. Ladepakken tilfredsstiller
+      <a href="https://www.dsb.no/lover/elektriske-anlegg-og-elektrisk-utstyr/tema/elbil---lading-og-sikkerhet/">
+        forskriftene fra DSB.</a>
+    </p>
+    <h2>
+      Kontant fra kr 18 625,- inkl. MVA
+    </h2>
+    <p>
+      Du kan også betale over strømregningen. Vi tilbyr delbetaling over 36 måneder.
+      Fra 558 kr/mnd (etableringsbeløp 1450 kr + 518 kr/måned inkl MVA. Totalt 20 098 kr)
+      <br><br>
+      <b>Se også våre andre modeller:</b>
+      <br>
+      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/ladepakke-basis/"><br>
+        Ladepakke Basis - Circontrol eHome<br>
+      </a>
+      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/smart-lader-wallbox-commander/"><br>
+        Smart Lader Pluss - Wallbox Commander
+      </a>
+    </p>
+  </div>
+  <div>
+    <h1>
+      Produktinformasjon Wallbox Pulsar
+    </h1>
+    <ul>
+      <li>Wallbox Pulsar med fastmontert ledning, 5 m, og type 1 eller type 2 stikkontakt.
+      </li>
+      <li>Basiskonfigurasjon er opp til 7,4 kW ladeeffekt på 1-fas.
+        Kan installeres med 22 kW ladeeffekt på 3-fas og type 2 stikkkontakt.
+        Hør med oss hvis du ønsker høyere effekt enn basiskonfigurasjonen.
+      </li>
+      <li>En av markedets minste elbilladere.
+      </li>
+      <li>Dimensjoner uten kontakt (D X B x H): 90 x 160 x 160 mm
+      </li>
+      <li>Valgbar effekt fra 6A til 32A
+      </li>
+      <li>Kan ha flere enheter i samme nettverk (krever en master lader type Commander som beskrevet i ladepakke 3)
+      </li>
+      <li>Kommunikasjon via Bluetooth og Wallbox app.
+      </li>
+      <li>
+        Automatisk brukeridentifikasjon
+      </li>
+      <li>
+        Full oversikt på web via en smart telefon app
+      </li>
+      <li>
+        Automatisk strømjustering
+      </li>
+      <li>
+        Klargjort for å kunne styre ladingen til tidspunkt når strømmen blir billigst
+      </li>
+      <li>
+        Kontroller energiforbruket
+      </li>
+      <li>
+        Svart eller hvit farge på lader.
+      </li>
+      <li>
+        Beskyttelsesgrad IP54. Tåler utendørs bruk, men ved montering på værutsatt vegg anbefales beskyttelseskappe
+      </li>
+    </ul>
+  </div>
+  <div>
+    <h1>
+      Installasjon
+    </h1>
+    <p>
+      Prisen for ladepakkene inkluderer en standard installasjon.
+      Det kan være mulig at du trenger en oppgradering med ytterligere materiell utover det som tilbys som standard.
+      Dette vil vi undersøke for deg, slik at du kan få en total kostnadsoversikt på forhånd hvis du ønsker det.
+    </p>
+    <h3>
+      Standard installasjonen inneholder følgende:
+    </h3>
+    <ul>
+      <li>
+        Forskriftsmessig installasjon av valgt ladestasjon som tar hensyn til personsikkerhet,
+        anleggssikkerhet og sikkerhet for bilen
+      </li>
+      <li>
+        Inntil 10 meter kabling fra sikringsskap til ladepunkt.
+      </li>
+      <li>
+        Type B jordfeilbryter hvis denne ikke er en del av selve laderen.
+      </li>
+      <li>
+        Automatsikring tilpasset kapasitet og valgt lader.
+      </li>
+      <li>
+        2 stk gjennomboringer i trevegg (ikke klima-yttervegg).
+      </li>
+      <li>
+        Dokumentasjon for installasjonen. Denne leveres gjennom opplasting til www.boligmappa.no.
+      </li>
+      <li>
+        Installasjon i alle kommuner på Nordmøre hvor NEAS opererer.
+      </li>
+      <li>
+        Leveringstid ca. 3 uker fra mottatt bestilling.
+      </li>
+    </ul>
+    <h3>
+      Forutsetninger for installasjonen:
+    </h3>
+    <ul>
+      <li>
+        Normal tilkomst, kapasitet og plass til automatsikring og jordfeilbryter i sikringsskap
+      </li>
+      <li>
+        Kapasitet til elbil lading i distribusjonsnettet for aktuell bolig,
+        samt riktig type nett (de fleste IT nett kan benyttes)
+      </li>
+      <li>
+        Ved manglende lagerbeholdning hos leverandør kan leveringstid endres.
+      </li>
+    </ul>
+  </div>
 
 </ion-content>
