--- a/src/pages/ceh/ceh.html
+++ b/src/pages/ceh/ceh.html
@@ -22,8 +22,8 @@
     </h1>
     <p>
       Lad elbilen trygt hjemme! Ladepakke Basis er en rimelig,
-      robust og brukervennlig lader med LED-indikator som informerer om ladingens status.
-      Dette er ladepakken for deg som ønsker en enkel og trygg lader til din elbil.
+      robust og brukervennlig lader med LED-indikator som informerer om ladingens status.<br>
+      Dette er ladepakken for deg som ønsker en enkel<br> og trygg lader til din elbil.
       Ladepakken tilfredsstiller
         <a href="https://www.dsb.no/lover/elektriske-anlegg-og-elektrisk-utstyr/tema/elbil---lading-og-sikkerhet/">
             forskriftene fra DSB.</a>
@@ -32,8 +32,8 @@
       Kontant fra kr 15 500,- inkl. MVA
     </h2>
     <p>
-      Du kan også betale over strømregningen. Vi tilbyr delbetaling over 36 måneder.
-      Fra 464 kr/mnd (etableringsbeløp 1200 kr + 431 kr/måned inkl MVA. Totalt 16 716 kr)
+      Du kan også betale over strømregningen. <br>Vi tilbyr delbetaling over 36 måneder.<br>
+      Fra 464 kr/mnd (etableringsbeløp 1200 kr <br>+ 431 kr/måned inkl MVA. Totalt 16 716 kr)
       <br><br>
       <b>Se også våre andre modeller:</b>
       <br>
@@ -70,6 +70,7 @@
         </ul>
   </div>
     <div>
+        <img src="assets/produktbilder/ehome2.jpg"/>
         <h1>
             Installasjon
         </h1>
