--- a/src/pages/wp/wp.html
+++ b/src/pages/wp/wp.html
@@ -21,7 +21,7 @@
       Smart lader - Wallbox Pulsar
     </h1>
     <p>
-      Lad elbilen trygt hjemme. Smart lader - Wallbox Pulsar er ladepakken for deg som vil koble deg opp mot laderen og styre ladingen.
+      Lad elbilen trygt hjemme. Smart lader - Wallbox Pulsar er ladepakken for deg som vil koble deg opp mot laderen og styre ladingen.<br>
       Denne har bluetooth og app. Ladepakken tilfredsstiller
       <a href="https://www.dsb.no/lover/elektriske-anlegg-og-elektrisk-utstyr/tema/elbil---lading-og-sikkerhet/">
         forskriftene fra DSB.</a>
@@ -88,6 +88,7 @@
     </ul>
   </div>
   <div>
+    <img src="assets/produktbilder/pulsarsocket2.png"/>
     <h1>
       Installasjon
     </h1>
