--- a/src/pages/kontakt-oss/kontakt-oss.html
+++ b/src/pages/kontakt-oss/kontakt-oss.html
@@ -17,7 +17,7 @@
       6517 Kristiansund
     </p><br>
   </div>
-  <button ion-button color="positive" block href="tel: +47 71565525">
+  <button ion-button color="positive" block href="tel:+47 71 56 55 25">
     Ring oss
   </button><br>
   <button ion-button color="positive" block href="mailto:neas@neas.mr.no">
