Fikset kontakt-oss page

--- a/src/pages/kontakt-oss/kontakt-oss.html
+++ b/src/pages/kontakt-oss/kontakt-oss.html
@@ -17,10 +17,10 @@
       6517 Kristiansund
     </p><br>
   </div>
-  <button ion-button color="positive" block href="tel:+47 71 56 55 25">
+  <button ion-button color="positive" block (click)="callUs()">
     Ring oss
   </button><br>
-  <button ion-button color="positive" block href="mailto:neas@neas.mr.no">
+  <button ion-button color="positive" block (click)="mailUs()">
     E-post
   </button>
 </ion-content>
