Fikset intern struktur

--- a/src/pages/ceh/ceh.html
+++ b/src/pages/ceh/ceh.html
@@ -37,10 +37,10 @@
       <br><br>
       <b>Se også våre andre modeller:</b>
       <br>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/smart-lader-wallbox-pulsar/"><br>
+        <a (click)="getThere('WpPage')"><br>
       Smart Lader - Wallbox Pulsar<br>
       </a>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/smart-lader-wallbox-commander/"><br>
+        <a (click)="getThere('WbcdPage')" ><br>
       Smart Lader Pluss - Wallbox Commander
       </a>
     </p>
