--- a/src/pages/kontakt-oss/kontakt-oss.html
+++ b/src/pages/kontakt-oss/kontakt-oss.html
@@ -7,20 +7,20 @@
 </ion-header>
 <ion-content padding id="page23">
   <h1 id="kontaktOss-heading22" style="color:#000000;text-align:center;">
-    Vi holder til på
+    Vi holder til på:
   </h1><br>
   <div id="kontaktOss-markdown16" style="text-align:center;" class="show-list-numbers-and-dots">
-    <p style="color:#000000;">
+    <h2 style="color:#158d12;">
       Industriveien 1
-    </p><br>
-    <p style="color:#000000;">
+    </h2><br>
+    <h2 style="color:#158d12;">
       6517 Kristiansund
-    </p><br>
+    </h2><br>
   </div>
-  <button ion-button color="positive" block (click)="callUs()">
+  <button ion-button color="secondary" block (click)="callUs()">
     Ring oss
   </button><br>
-  <button ion-button color="positive" block (click)="mailUs()">
+  <button ion-button color="secondary" block (click)="mailUs()">
     E-post
   </button>
 </ion-content>
