--- a/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
+++ b/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
@@ -6,17 +6,17 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3">
-  <h2 id="mittSikringsskap-heading2" style="color:#000000;">
+  <h3 id="mittSikringsskap-heading2" style="color:#000000;">
     Hvilken ampere er det i din hovedsikring
-  </h2>
-  <ion-list>
-    <button ion-button block (click)="selectAmpere('40')">
+  </h3>
+  <ion-list><br>
+    <button color="secondary" ion-button block (click)="selectAmpere('40')">
       40 A
-    </button>
-    <button ion-button block (click)="selectAmpere('50')">
+    </button><br>
+    <button color="secondary" ion-button block (click)="selectAmpere('50')">
       50 A
-    </button>
-    <button ion-button block (click)="selectAmpere('63')">
+    </button><br>
+    <button color="secondary" ion-button block (click)="selectAmpere('63')">
       63 A
     </button>
   </ion-list>
