--- a/src/pages/neasprodukter/neasprodukter.html
+++ b/src/pages/neasprodukter/neasprodukter.html
@@ -13,11 +13,11 @@
           <img src="assets/produktbilder/ehome.jpg"/>
         </ion-thumbnail>
         <h2>
-            <button (click)="goTo('ceh')">Circontrol eHome</button>
+            <button ion-button color="secondary" block  (click)="goTo('ceh')">Circontrol eHome</button>
         </h2>
       </ion-item>
       <ion-item-options side="left">
-        <button ion-button color="positive"></button>
+        <button ion-button color="secondary"></button>
       </ion-item-options>
     </ion-item-sliding>
     <ion-item color="none" id="NEASProdukter-list-item2">
@@ -25,7 +25,7 @@
         <img src="assets/produktbilder/pulsarsocket.png"/>
       </ion-thumbnail>
       <h2>
-          <button (click)="goTo('wp')">Wallbox Pulsar</button>
+          <button ion-button color="secondary" block  (click)="goTo('wp')">Wallbox Pulsar</button>
       </h2>
     </ion-item>
     <ion-item color="none" id="NEASProdukter-list-item3">
@@ -33,7 +33,7 @@
         <img src="assets/produktbilder/wallcommander.png"/>
       </ion-thumbnail>
       <h2>
-        <button (click)="goTo('wbcd')">Wallbox Commander</button>
+        <button ion-button color="secondary" block  (click)="goTo('wbcd')">Wallbox Commander</button>
       </h2>
     </ion-item>
   </ion-list>
