--- a/src/pages/wbcd/wbcd.html
+++ b/src/pages/wbcd/wbcd.html
@@ -36,10 +36,10 @@
       <br><br>
       <b>Se også våre andre modeller:</b>
       <br>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/ladepakke-basis/"><br>
+      <a (click)="getThere('CehPage')" ><br>
         Ladepakke Basis - Circontrol eHome<br>
       </a>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/smart-lader-wallbox-pulsar/"><br>
+      <a (click)="getThere('WpPage')"><br>
         Smart Lader - Wallbox Pulsar
       </a>
     </p>
