--- a/src/pages/wp/wp.html
+++ b/src/pages/wp/wp.html
@@ -35,10 +35,10 @@
       <br><br>
       <b>Se også våre andre modeller:</b>
       <br>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/ladepakke-basis/"><br>
+      <a (click)="getThere('CehPage')" ><br>
         Ladepakke Basis - Circontrol eHome<br>
       </a>
-      <a href="https://www.neas.mr.no/stroem/hjemmelading-elbil/smart-lader-wallbox-commander/"><br>
+      <a (click)="getThere('WbcdPage')" ><br>
         Smart Lader Pluss - Wallbox Commander
       </a>
     </p>
