--- a/src/pages/resultat/resultat.html
+++ b/src/pages/resultat/resultat.html
@@ -23,10 +23,20 @@
     </p>
   </div>
   <h1 id="w13800-heading19" style="color:#31DC51;font-weight:300;text-align:center;">
-    {{ effect }} W <br>
+    {{ effect }} W
   </h1>
+
   <h2>
-    Med din <br>
-    {{bilValg}}
+    Med din:
   </h2>
+  <div>
+    {{bilValg}}
+  </div>
+  <h2>
+    får du følgende ladetid:
+</h2>
+  <div class="ladetid">
+    {{ladeTid}} timer
+  </div>
+
 </ion-content>
