--- a/src/pages/wbcd/wbcd.html
+++ b/src/pages/wbcd/wbcd.html
@@ -46,7 +46,7 @@
   </div>
   <div>
     <h1>
-      Produktinformasjon Wallbox Pulsar
+      Produktinformasjon Wallbox Commander
     </h1>
     <ul>
       <li>Wallbox Commander med fastmontert ledning, 5 m, og type 1 eller type 2 stikkontakt.
