--- a/src/pages/min-bil/min-bil.html
+++ b/src/pages/min-bil/min-bil.html
@@ -74,6 +74,43 @@
         <ion-option>
           Volkswagen e-up!
         </ion-option>
+        <ion-option>
+          Chevrolet Bolt
+        </ion-option>
+        <ion-option>
+          Citroën Berlingo
+        </ion-option>
+        <ion-option>
+          Buddy Electric Buddy
+        </ion-option>
+        <ion-option>
+          Smart Fortwo Electric Drive
+        </ion-option>
+        <ion-option>
+          Renault Twizy
+        </ion-option>
+        <ion-option>
+          Renault Kangoo Z.E.
+        </ion-option>
+        <ion-option>
+          Renault Fluence
+        </ion-option>
+        <ion-option>
+          Bolloré Bluecar
+        </ion-option>
+        <ion-option>
+          BYD Auto e6
+        </ion-option>
+        <ion-option>
+          Tazzari Tazzari Zero
+        </ion-option>
+        <ion-option>
+          Tesla Motors Roadster
+        </ion-option>
+        <ion-option>
+          Elbil Norge Buddy ALB
+        </ion-option>
+
       </ion-select>
     </ion-item>
   </form>
