--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Min lader" tabIcon="car" id="mainPage-tab1"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="NEAS produkter" tabIcon="bulb" id="mainPage-tab3"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Kontakt oss" tabIcon="call" id="mainPage-tab4"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Mitt forbruk" tabIcon="flash" id="mainPage-tab2"></ion-tab>
 </ion-tabs>
