--- a/src/pages/pris-resultat/pris-resultat.html
+++ b/src/pages/pris-resultat/pris-resultat.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>prisResultat</ion-title>
+    <ion-title>PrisResultat</ion-title>
   </ion-navbar>
 
 </ion-header>
