--- a/src/pages/resultat/resultat.html
+++ b/src/pages/resultat/resultat.html
@@ -38,5 +38,9 @@
   <div class="ladetid">
     {{ladeTid}} timer
   </div>
+    <div>
+
+    </div>
+  <button ion-button color="secondary" (click)="tilutregning()" >Til utregning</button>
 
 </ion-content>
