--- a/src/pages/resultat/resultat.html
+++ b/src/pages/resultat/resultat.html
@@ -41,6 +41,6 @@
     <div>
 
     </div>
-  <button ion-button color="secondary" (click)="tilutregning()" >Til utregning</button>
+  <button ion-button color="color()" (click)="tilutregning()" >Til utregning</button>
 
 </ion-content>
