fixet noe greier

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -29,13 +29,13 @@
       Dette må du vite for å komme igang.
     </p>
     <p>
-      vi kommer til å trenge å vite hvor mange ampere det er i ditt el-anlegg, dette finner du fort ut av ved å se i ditt sikringsskap.
+      Da trenger jeg å vite hvor mange ampere det er i ditt el-anlegg, dette finner du fort ut av ved å se i ditt sikringsskap.
     </p>
-    <img src="../../assets/produktbilder/FinneHovedsikringsAmpere.jpg" height="250" width="1600"/>
+    <img src="../../assets/produktbilder/FinneHovedsikringsAmpere.jpg" height="100" width="200"/>
     <p>
-      vi kommer også til å vite hvor stor spenning det er i den kursen du skal lade bilen på.
+      Jeg trenger også å vite hvor stor spenning det er i den kursen du skal lade bilen på.
     </p>
-    <img src="../../assets/produktbilder/FinneSpenning.jpg" height="250" width="1600"/>
+    <img src="../../assets/produktbilder/FinneSpenning.jpg" height="100" width="200"/>
   </div>
 
   <button ion-button block (click)="goToNext()">Begynn Testen</button>
