Gjrde utregning ferdig

--- a/src/pages/mitt-forbruk/mitt-forbruk.html
+++ b/src/pages/mitt-forbruk/mitt-forbruk.html
@@ -21,7 +21,7 @@
       <ion-input type="number" formControlName="strompris"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Ladetid</ion-label>
+      <ion-label>Ladekapasitet Kw/h</ion-label>
       <ion-input type="number" formControlName="ladeTid"></ion-input>
     </ion-item>
   </form>
