--- a/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
+++ b/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content padding id="page3">
   <h3 id="mittSikringsskap-heading2" style="color:#000000;">
-    Hvilken ampere er det i din hovedsikring
+    Hva yter din kurs
   </h3>
   <form>
     <ion-item>
@@ -16,7 +16,19 @@
       </ion-label>
       <ion-select name="ampereVelger" (ionChange)="selectAmp($event)">
         <ion-option>
+          6
+        </ion-option>
+        <ion-option>
+          8
+        </ion-option>
+        <ion-option>
+          10
+        </ion-option>
+        <ion-option>
           13
+        </ion-option>
+        <ion-option>
+          16
         </ion-option>
         <ion-option>
           20
