--- a/src/pages/pris-resultat/pris-resultat.html
+++ b/src/pages/pris-resultat/pris-resultat.html
@@ -14,10 +14,10 @@
 
 
 <ion-content padding>
-  <h1 id="w13800-heading18" style="color:#000000;text-align:center;">
+  <h1 id="w13800-heading18" style="color:black; text-align: center">
     Det vil koste deg
   </h1>
-  <h1 id="w13800-heading19" style="color:#31DC51;font-weight:300;text-align:center;">
+  <h1 id="w13800-heading19" style="color:black; text-align: center">
     {{ pris }} kr
   </h1>
 
