--- a/src/pages/resultat/resultat.html
+++ b/src/pages/resultat/resultat.html
@@ -18,24 +18,21 @@
     Du kan få
   </h1>
   <div id="w13800-markdown12" style="text-align:center;" class="show-list-numbers-and-dots">
-    <p style="color:#000000;">
-      Dette er det vi kom frem til at du kan få ut av veggen hos deg
-    </p>
   </div>
-  <h1 id="w13800-heading19" style="color:#31DC51;font-weight:300;text-align:center;">
+  <h1 id="w13800-heading19" style="color:black;font-weight:300;text-align:center;">
     {{ effect }} W
   </h1>
 
   <h2>
     Med din:
   </h2>
-  <div>
+  <div style="color:black;">
     {{bilValg}}
   </div>
   <h2>
     får du følgende ladetid:
 </h2>
-  <div class="ladetid">
+  <div class="ladetid" style="color:black;">
     {{ladeTid}} timer
   </div>
     <div>
