--- a/src/pages/min-bil/min-bil.html
+++ b/src/pages/min-bil/min-bil.html
@@ -5,16 +5,16 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page2">
-  <h1 id="minBil-heading1" style="color:#000000;">
+<ion-content style="background: #f1f1f1">
+  <h1 id="minBil-heading1" style="color: #2d2d2d">
     Velg din bil
   </h1>
   <div id="minBil-markdown1" class="show-list-numbers-and-dots">
-    <p style="color:#000000;">
+    <p style="color: #2d2d2d">
       For å finne ut hvilken lader som passer for deg må vi vite hvilken bil du har
     </p>
   </div>
-  <form id="minBil-form2">
+  <form id="minBil-form2" >
     <ion-item id="minBil-select1">
       <ion-label>
         bil:
