--- a/src/pages/pris-resultat/pris-resultat.html
+++ b/src/pages/pris-resultat/pris-resultat.html
@@ -13,14 +13,12 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding  style="background: #f1f1f1">
   <h1 id="w13800-heading18" style="color:black; text-align: center">
     Det vil koste deg
   </h1>
   <h1 id="w13800-heading19" style="color:black; text-align: center">
     {{ pris }} kr
   </h1>
-
-<ion-content padding>
 
 </ion-content>
