--- a/src/pages/resultat/resultat.html
+++ b/src/pages/resultat/resultat.html
@@ -13,26 +13,29 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding  style="background: #f1f1f1">
   <h1 id="w13800-heading18" style="color:#000000;text-align:center;">
     Du kan få
   </h1>
-  <div id="w13800-markdown12" style="text-align:center;" class="show-list-numbers-and-dots">
+  <div id="w13800-markdown12" style="text-align:center; color: #2d2d2d" class="show-list-numbers-and-dots">
   </div>
-  <h1 id="w13800-heading19" style="color:black;font-weight:300;text-align:center;">
+  <h1 id="w13800-heading19" style="color:#2d2d2d;font-weight:300;text-align:center;">
     {{ effect }} W
   </h1>
 
-  <h2>
+  <h3>
+    Da har du {{ resEffect }} W du ikke får brukt
+  </h3>
+  <h2 style="color: #2d2d2d">
     Med din:
   </h2>
-  <div style="color:black;">
+  <div style="color:#2d2d2d;">
     {{bilValg}}
   </div>
   <h2>
     får du følgende ladetid:
 </h2>
-  <div class="ladetid" style="color:black;">
+  <div class="ladetid" style="color:#2d2d2d;">
     {{ladeTid}} timer
   </div>
     <div>
