--- a/src/pages/sikrings-valg/sikrings-valg.html
+++ b/src/pages/sikrings-valg/sikrings-valg.html
@@ -11,13 +11,13 @@
   </ion-navbar>
 
 </ion-header>
-<ion-content padding>
-  <h3 id="w32A-heading5" style="color:#000000;">
+<ion-content padding  style="background: #f1f1f1">
+  <h3 id="w32A-heading5" style="color: #2d2d2d">
     Du behøver en elbillader med ca {{ maxAmpere }} Amp
   </h3>
-  <h4>
+  <p style="color: #2d2d2d">
     Og til slutt trenger vi å vite spenningen i ditt sikringskap
-  </h4><br>
+  </p><br>
   <button id="w32A-button11" ion-button color="secondary" block (click)="moveOn('230V')" >
     230 V
   </button><br>
