--- a/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
+++ b/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
@@ -1,17 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
+    <ion-title style="color: #2d2d2d">
       Mitt sikringsskap ({{ valgtBil }})
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page3">
-  <h3 id="mittSikringsskap-heading2" style="color:#000000;">
+<ion-content padding id="page3" style="color: #2d2d2d"  style="background: #f1f1f1">
+  <h3 id="mittSikringsskap-heading2" style="color: #2d2d2d">
     Hva yter din kurs
   </h3>
   <form>
     <ion-item>
-      <ion-label>
+      <ion-label style="color: #2d2d2d">
         Ampere:
       </ion-label>
       <ion-select name="ampereVelger" (ionChange)="selectAmp($event)">
