--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Hjemmelader.no</ion-title>
+    <ion-title style="text-align: center">Ladekalkulator</ion-title>
   </ion-navbar>
 
 </ion-header>
