--- a/src/pages/mitt-forbruk/mitt-forbruk.html
+++ b/src/pages/mitt-forbruk/mitt-forbruk.html
@@ -15,18 +15,22 @@
 
 <ion-content padding style="background: #f1f1f1">
 
-  <form [formGroup] = "stromRegner">
+  <form [formGroup]="calc">
     <ion-item>
-      <ion-label style="text-align: left">Strømpris pr Kw/h: </ion-label>
-      <ion-input type="number" formControlName="strompris" style="text-align: right"></ion-input>
+      <ion-label>Strømpris pr Kw/h: </ion-label>
+      <ion-input [formControl]="calc.controls['calcPris']"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label style="text-align: left">Ladekapasitet Kw/h: </ion-label>
-      <ion-input type="number" formControlName="ladeTid" style="text-align: right"></ion-input>
-    </ion-item>
+      <ion-item>
+          <ion-label>Kw/h du skal lade: </ion-label>
+          <ion-input [formControl]="calc.controls['calcKap']"> 50%</ion-input>
+      </ion-item>
+      <ion-item>
+      <ion-label>% Kw/h du skal lade: </ion-label>
+      <ion-input [formControl]="calc.controls['calcData']"> 50%</ion-input>
+      </ion-item>
+      <button ion-button (click)="result()">Regn ut</button>
   </form>
-    <button id="regnut" ion-button color="secondary" (click)="Regnut()">
-    Regn ut
-    </button>
+
+
 
 </ion-content>
