centrert og fiksen noen ting

--- a/src/pages/min-bil/min-bil.html
+++ b/src/pages/min-bil/min-bil.html
@@ -6,9 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content style="background: #f1f1f1">
-  <h1 id="minBil-heading1" style="color: #2d2d2d">
-    Velg din bil
-  </h1>
+  <div id="spacer"></div>
   <div id="minBil-markdown1" class="show-list-numbers-and-dots">
     <p style="color: #2d2d2d">
       For å finne ut hvilken lader som passer for deg må vi vite hvilken bil du har
