--- a/src/pages/mitt-forbruk/mitt-forbruk.html
+++ b/src/pages/mitt-forbruk/mitt-forbruk.html
@@ -7,14 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>mittForbruk</ion-title>
+    <ion-title>Mitt Forbruk</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding style="background: #f1f1f1">
-
+  <div id="spacer"></div>
   <form [formGroup]="calc">
     <ion-item>
       <ion-label>Strømpris pr Kw/h: </ion-label>
