--- a/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
+++ b/src/pages/mitt-sikringsskap/mitt-sikringsskap.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
-    <ion-title style="color: #2d2d2d">
-      Mitt sikringsskap ({{ valgtBil }})
+    <ion-title style="color: #2d2d2d; text-align: center">
+      {{ valgtBil }}
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3" style="color: #2d2d2d"  style="background: #f1f1f1">
-  <h3 id="mittSikringsskap-heading2" style="color: #2d2d2d">
+  <div id="spacer"></div>
+  <p id="mittSikringsskap-heading2" style="color: #2d2d2d; text-align: center">
     Hva yter din kurs
-  </h3>
+  </p>
   <form>
     <ion-item>
       <ion-label style="color: #2d2d2d">
