--- a/src/pages/sikrings-valg/sikrings-valg.html
+++ b/src/pages/sikrings-valg/sikrings-valg.html
@@ -7,14 +7,11 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>Spenning</ion-title>
   </ion-navbar>
 
 </ion-header>
 <ion-content padding  style="background: #f1f1f1">
-  <h3 id="w32A-heading5" style="color: #2d2d2d">
-    Du behøver en elbillader med ca {{ maxAmpere }} Amp
-  </h3>
   <p style="color: #2d2d2d">
     Og til slutt trenger vi å vite spenningen i ditt sikringskap
   </p><br>
