--- a/src/pages/type-lader/type-lader.html
+++ b/src/pages/type-lader/type-lader.html
@@ -14,6 +14,7 @@
 
 
 <ion-content padding  style="background: #f1f1f1">
+  <div id="spacer"></div>
   <h3 id="mittSikringsskap-heading2" style="color: #2d2d2d">
     Hva slags lader har du?
   </h3>
